compiler/src/test/resources/amyc/nameAnalyzer/passing/MatchShadowParameter.amy
module Locals
  fn foo(i: Int): Int = {
    i match {
      case i => 0 // should pass, but give a warning about suspicious shadowing
    }
  }
end Locals
