compiler/src/test/resources/amyc/nameAnalyzer/failing/DuplicateLocals.amy
module Locals
  fn foo(): Int = {
    val i: Int = 42;
    val i: Boolean = true;
    43
  }
end Locals
